Upgrade loki, promtail.